initial icon system demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<icon id="chevron"></icon>
-<icon id="x"></icon>
-<icon id="check"></icon>
-<icon id="search"></icon>
-<icon id="hamburger"></icon>
-<icon id="ellipsis"></icon>
-<icon id="trash"></icon>
-<icon id="caret"></icon>
-<icon id="pin"></icon>
-<icon id="warning"></icon>
+<!--The whole content below can be removed with the new code.-->
+<div style="text-align:center">
+	<h1><icon class="u-margin-right" slug="check"></icon>Angular SVG Icon System Demo</h1>
+	<icon slug="hamburger"></icon>
+	<icon slug="warning" svgClassNames="icon--red"></icon>
+	<icon slug="pin"></icon>
+	<icon slug="x"></icon>
+	<button>Search<icon class="u-margin-left" slug="search"></icon></button>
+	<button>Next<icon class="u-margin-left" slug="chevron" svgClassNames="icon--flipped"></icon></button>
+</div>
 
