adding node types

--- a/src/app/icon/icon.component.scss
+++ b/src/app/icon/icon.component.scss
@@ -1,8 +1,8 @@
 .icon{
-	width: 1.2em;
-	height: 1.2em;
+	width: 1em;
+	height: 1em;
 	fill: currentColor;
-	vertical-align: -0.24em;
+	//vertical-align: -0.24em;
 }
 
 .icon--circle-bg{
